--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -5,10 +5,10 @@
 
 		<link rel="shortcut icon" href="images/icon.ico" >
 
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/6-filters.css"/>
+		<link rel="stylesheet" href="static/styles/4-common.css"/>
+		<link rel="stylesheet" href="static/styles/3-header.css"/>
+		<link rel="stylesheet" href="static/styles/3-footer.css"/>
+		<link rel="stylesheet" href="static/styles/6-filters.css"/>
 	</head>
     <body>
 		<header>
@@ -38,7 +38,7 @@
 					<h4>&nbsp;</h4>
 					<ul class="popover">
 					{% for amenity in amenities|sort(attribute='name') %}
-         				 <li>{{ amenity.name }}</li>
+						<li>{{ amenity.name }}</li>
         			{% endfor %}
 					</ul>
 				</div>
