--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -18,7 +18,7 @@
 	border-right: 1px solid #DDDDDD;
 }
 
-.filter_amenities {
+.filters.amenities {
 	display: inline;
 	vertical-align: middle;
 	height: 100%;
@@ -49,7 +49,7 @@
 	display: inline-block;
 }
 
-.filter_amenities:hover .popover {
+.filters.amenities:hover .popover {
 	display: inline-block;
 }
 
@@ -59,8 +59,7 @@ ul {
 	padding-bottom: 20px;
 }
 
-li {
-}	
+
 
 h2 {
 	font-size: 16px;
